# kronos-swarm

./: CHANGELOG.md  README.md  SECURITY.md  pyproject.toml
dashboard/ws/: handlers.py
docker/sandbox/: Dockerfile  runner.py
docs/: CRON-JOBS.md  LLM_PROVIDERS.md  MCP.md  SECURITY.md  SKILLS.md
kronos/: __main__.py  audit.py  bridge.py  cli.py  config.py  llm.py  logging.py  persona.py  session.py  swarm_store.py  vision.py
kronos/agents/deep_research/: graph.py  nodes.py  state.py
kronos/competitors/: digest.py
kronos/cron/: skill_create.py  skill_improve.py  user_model.py
kronos/memory/: store.py
kronos/security/: pii.py
kronos/skills/: hub.py  store.py  tools.py
kronos/tools/: dynamic.py  sandbox.py  session_search.py
scripts/: build-sandbox.sh  deploy.sh
tests/: test_capabilities.py  test_cli_demo.py  test_cli_templates.py  test_competitor_monitor.py  test_deep_research_quality.py  test_docker_quickstart.py  test_persona.py  test_pii_masking.py  test_session_search.py  test_skill_create.py  test_skills_hub.py  test_user_model.py  test_vision.py
