[project]
name = "kronos-agent-os"
version = "0.1.1"
description = "Kronos Agent OS (KAOS): self-hosted runtime for durable AI agents with memory, skills, MCP tools, automations, and sub-agent coordination"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
keywords = [
    "ai-agents",
    "agent-os",
    "mcp",
    "memory",
    "skills",
    "self-hosted",
    "swarm",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: FastAPI",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
]

dependencies = [
    # LangChain core (messages, tools, models — no LangGraph)
    "langchain-core>=0.3",

    # LangChain LLM providers
    "openai>=1.0",
    "langchain-openai>=0.3",        # Kimi K2.5 via OpenAI-compatible API
    "langchain-deepseek>=1.0",

    # MCP integration
    "langchain-mcp-adapters>=0.2",

    # Persistence
    "aiosqlite>=0.20",

    # Telegram bridge
    "telethon>=1.36",
    "aiohttp>=3.10",

    # Dashboard API
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",

    # Competitor monitoring
    "google-play-scraper>=1.2",
    "pyyaml>=6.0",
    "feedparser>=6.0",

    # SSH (server ops)
    "asyncssh>=2.17",

    # Config & utils
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",

    # Observability
    "langfuse>=2.0",
]

[project.optional-dependencies]
memory = [
    "mem0ai>=0.1",
    "sentence-transformers>=5.0",
]
browser = [
    "playwright>=1.48",
]
discord = [
    "discord.py>=2.0",
]
tts = [
    "edge-tts>=6.1",
]
aso = [
    "httpx>=0.27",
    "langgraph>=0.4",
    "langgraph-checkpoint-sqlite>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[project.scripts]
kaos = "kronos.cli:main"

[project.urls]
Homepage = "https://github.com/spyrae/kronos-agent-os"
Repository = "https://github.com/spyrae/kronos-agent-os"
Issues = "https://github.com/spyrae/kronos-agent-os/issues"
Documentation = "https://github.com/spyrae/kronos-agent-os/tree/main/docs"

[tool.setuptools]
include-package-data = false
py-modules = []

[tool.setuptools.packages.find]
include = ["kronos", "kronos.*", "dashboard", "dashboard.*", "aso", "aso.*"]
exclude = ["dashboard-ui", "dashboard-ui.*"]

[tool.setuptools.package-data]
"kronos.competitors" = ["competitors.yaml"]
"aso.config" = ["*.json"]
"aso.prompts" = ["*.md"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501", "E402", "E701", "N806", "E741", "F821", "F841", "UP042"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires external services (API keys, MCP servers)",
]
